--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
             <div class="col-md-12 col-sm-12 text-center">
               <div class="contents">
                 <h5 class="script-font wow fadeInUp" data-wow-delay="0.2s">Hi This is</h5>
-                <h2 class="head-title wow fadeInUp" data-wow-delay="0.4s">Tom Saulnier</h2>
-                <p class="script-font wow fadeInUp" data-wow-delay="0.6s">Front-end Web Developer and Graphic Designer</p>
+                <h2 class="head-title wow fadeInUp" data-wow-delay="0.4s">Bishnu Haldar</h2>
+                <p class="script-font wow fadeInUp" data-wow-delay="0.6s">Web Analyst</p>
                 <ul class="social-icon wow fadeInUp" data-wow-delay="0.8s">
                   <li>
                     <a class="facebook" href="#"><i class="icon-social-facebook"></i></a>
@@ -159,17 +159,19 @@
           <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
             <div class="profile-wrapper wow fadeInRight" data-wow-delay="0.3s">
               <h3>Hi Guys!</h3>
-              <p>Est diam venenatis arcu lacus ad. Duis quis eros. Cursus et rutrum eleifend sollicitudin lacinia justo id turpis. Nec convallis integer. Odio eget duis. Nulla aenean et. Blandit varius sollicitudin. Pellentesque leo primis neque urna magnis. Elit ut sollicitudin. Et est a nam dolores eget itaque sagittis et parturient duis est eleifend sociis rutrum odio viverra integer.</p>
+              <p>Hands on experience  using digital analytics tools like Google Analytics, Google Tag Manager, Adobe analytics, Google data studio during  training period
+Undergoing training on multiple digital tools like  Tealium , Adobe Target, Treasure Data
+Building ecommerce dashboards
+</p>
               <div class="about-profile">
                 <ul class="admin-profile">
-                  <li><span class="pro-title"> Name </span> <span class="pro-detail">Tom Saulnier</span></li>
-                  <li><span class="pro-title"> Age </span> <span class="pro-detail">25 Years</span></li>
-                  <li><span class="pro-title"> Experience </span> <span class="pro-detail">4 Years</span></li>
-                  <li><span class="pro-title"> Country </span> <span class="pro-detail">USA</span></li>
-                  <li><span class="pro-title"> Location </span> <span class="pro-detail">San Francisco, CA</span></li>
-                  <li><span class="pro-title"> e-mail </span> <span class="pro-detail">email@example.com</span></li>
-                  <li><span class="pro-title"> Phone </span> <span class="pro-detail">+ (00) 123 456 789</span></li>
-                  <li><span class="pro-title"> Freelance </span> <span class="pro-detail">Available</span></li>
+                  <li><span class="pro-title"> Name </span> <span class="pro-detail">Bishnu Haldar</span></li>
+                  <li><span class="pro-title"> Age </span> <span class="pro-detail">23 Years</span></li>
+                  <li><span class="pro-title"> Experience </span> <span class="pro-detail">-- Years</span></li>
+                  <li><span class="pro-title"> Country </span> <span class="pro-detail">India</span></li>
+                  <li><span class="pro-title"> Location </span> <span class="pro-detail">Bengluru</span></li>
+                  <li><span class="pro-title"> e-mail </span> <span class="pro-detail">Bishnu.haldar@capgemini.com</span></li>
+                  <li><span class="pro-title"> Phone </span> <span class="pro-detail">+ (91) 8554003147</span></li>
                 </ul>
               </div>
               <a href="#" class="btn btn-common"><i class="icon-paper-clip"></i> Download Resume</a>
