--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
           <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
             <div class="profile-wrapper wow fadeInRight" data-wow-delay="0.3s">
               <h3>Hi Guys!</h3>
-              <p>Hands on experience  using digital analytics tools like Google Analytics, Google Tag Manager, Adobe analytics, Google data studio during  training period
+              <p>I have hands on experience  using digital analytics tools like Google Analytics, Google Tag Manager, Adobe analytics, Google data studio during  training period
 Undergoing training on multiple digital tools like  Tealium , Adobe Target, Treasure Data
 Building ecommerce dashboards
 </p>
@@ -195,8 +195,8 @@ Building ecommerce dashboards
                 <i class="icon-grid"></i>
               </div>
               <div class="services-content">
-                <h3><a href="#">Front-end Development</a></h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse condi.</p>
+                <h3><a href="#">Web Analysis</a></h3>
+                <p>LWeb analytics is the process of analyzing the behavior of visitors to a website.</p>
               </div>
             </div>
           </div>
@@ -207,8 +207,8 @@ Building ecommerce dashboards
                 <i class="icon-layers"></i>
               </div>
               <div class="services-content">
-                <h3><a href="#">Graphic Design</a></h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse condi.</p>
+                <h3><a href="#">Tag Management</a></h3>
+                <p>A tag management system (TMS) is software that can be used to manage tracking tags used in digital marketing.</p>
               </div>
             </div>
           </div>
@@ -219,8 +219,8 @@ Building ecommerce dashboards
                 <i class="icon-briefcase"></i>
               </div>
               <div class="services-content">
-                <h3><a href="#">Business Branding</a></h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse condi.</p>
+                <h3><a href="#">CDP</a></h3>
+                <p>A CDP is packaged software, built for business users, that will connect to all customer-related systems.</p>
               </div>
             </div>
           </div>
@@ -254,23 +254,23 @@ Building ecommerce dashboards
                 </li>
                 <li>
                   <div class="content-text">
-                    <h3 class="line-title">Bsc In CSE - Yale University</h3>
-                    <span>2012 - 2016</span>
-                    <p class="line-text">Expenses as material breeding insisted building to in. Continual so distrusts pronounce by unwilling listening. Thing do taste on we manor.</p>
+                    <h3 class="line-title">BE in Mechanical engineering from Nagpur University</h3>
+                    <span>2018 - 2021</span>
+                    <p class="line-text">Abha gayakwad patil college of engineering Nagpur </p>
                   </div>
                 </li>
                 <li>
                   <div class="content-text">
-                    <h3 class="line-title">Higher Secondary School - San Francisco College</h3>
-                    <span>2010 - 2012</span>
-                    <p class="line-text">Expenses as material breeding insisted building to in. Continual so distrusts pronounce by unwilling listening. Thing do taste on we manor.</p>
+                    <h3 class="line-title">Higher Secondary School -Maharashtra state board</h3>
+                    <span>2014 - 2016</span>
+                    <p class="line-text">Z. P. mahatma gandhi jr. science college ghot</p>
                   </div>
                 </li>
                 <li>
                   <div class="content-text">
-                    <h3 class="line-title">Secondary School - Labratory High School</h3>
-                    <span>2005 - 2010</span>
-                    <p class="line-text">Expenses as material breeding insisted building to in. Continual so distrusts pronounce by unwilling listening. Thing do taste on we manor.</p>
+                    <h3 class="line-title">Secondary School - Maharashtra state board</h3>
+                    <span>2011 - 2014</span>
+                    <p class="line-text">Z. P. Mahatma gandhi high school ghot</p>
                   </div>
                 </li>
               </ul>
@@ -281,27 +281,27 @@ Building ecommerce dashboards
               <ul class="timeline">
                 <li>
                   <i class="icon-briefcase"></i>
-                  <h2 class="timelin-title">Experience</h2>
+                  <h2 class="timelin-title">Experience & Projects</h2>
                 </li>
                 <li>
                   <div class="content-text">
-                    <h3 class="line-title">Art Director - Tesla Inc.</h3>
-                    <span>Jan 2018 - Present</span>
-                    <p class="line-text">Expenses as material breeding insisted building to in. Continual so distrusts pronounce by unwilling listening. Thing do taste on we manor.</p>
+                    <h3 class="line-title">Engineering project</h3>
+                    <span>2020 - 2021</span>
+                    <p class="line-text">AI based automated fire fighting robot using Arduino uno </p>
                   </div>
                 </li>
                 <li>
                   <div class="content-text">
-                    <h3 class="line-title">UX/UI Designer - Samsung</h3>
-                    <span>Nov 2016 - Dec 2017</span>
-                    <p class="line-text">Expenses as material breeding insisted building to in. Continual so distrusts pronounce by unwilling listening. Thing do taste on we manor.</p>
+                    <h3 class="line-title">Web analyst -Capgemini</h3>
+                    <span>Mar 2022 - Present</span>
+                    <p class="line-text">Web analysis, Tag management, CDP, Data visualization</p>
                   </div>
                 </li>
                 <li>
                   <div class="content-text">
-                    <h3 class="line-title">Intern UI Designer - UIdeck</h3>
-                    <span>Mar 2015 - Oct 2016</span>
-                    <p class="line-text">Expenses as material breeding insisted building to in. Continual so distrusts pronounce by unwilling listening. Thing do taste on we manor.</p>
+                    <h3 class="line-title">--</h3>
+                    <span>--</span>
+                    <p class="line-text">--</p>
                   </div>
                 </li>
               </ul>
