--- a/index.html
+++ b/index.html
@@ -231,8 +231,8 @@ Building ecommerce dashboards
                 <i class="icon-bubbles"></i>
               </div>
               <div class="services-content">
-                <h3><a href="#">Consultancy</a></h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse condi.</p>
+                <h3><a href="#">Data visualizatio</a></h3>
+                <p>Data visualization is the representation of data through use of common graphics, such as charts, plots, infographics, and even animations.</p>
               </div>
             </div>
           </div>
