--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ Building ecommerce dashboards
               </div>
               <div class="services-content">
                 <h3><a href="#">Web Analysis</a></h3>
-                <p>LWeb analytics is the process of analyzing the behavior of visitors to a website.</p>
+                <p>Web analytics is the process of analyzing the behavior of visitors to a website.</p>
               </div>
             </div>
           </div>
@@ -557,21 +557,21 @@ Building ecommerce dashboards
                     <div class="contact-icon">
                       <i class="fa fa-envelope"></i>
                     </div>
-                    <p><a href="mailto:hello@tom.com">hello@tom.com</a></p>
-                    <p><a href="mailto:tomsaulnier@gmail.com">tomsaulnier@gmail.com</a></p>
+                    <p><a href="mailto:bishnu.haldar@capgemini.com">bishnu.haldar@capgemini.com</a></p>
+                    <p><a href="mailto:bishnuhaldar560@gmail.com">bishnuhaldar560@gmail.com</a></p>
                   </div>
                   <div class="single-contact">
                     <div class="contact-icon">
                       <i class="fa fa-phone"></i>
                     </div>
-                    <p><a href="#">+ (00) 123 456 789</a></p>
-                    <p><a href="#">+ (00) 123 344 789</a></p>
+                    <p><a href="#">+ (91) 8554003147/a></p>
+                    <p><a href="#">+ (00) 0000000000</a></p>
                   </div>
                 </div>
               </div>
             </div>
             <div class="col-md-12">
-            <object style="border:0; height: 450px; width: 100%;" data="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d34015.943594576835!2d-106.43242624069771!3d31.677719472407432!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86e75d90e99d597b%3A0x6cd3eb9a9fcd23f1!2sCourtyard+by+Marriott+Ciudad+Juarez!5e0!3m2!1sen!2sbd!4v1533791187584"></object>
+            <object style="border:0; height: 450px; width: 100%;" data="https://goo.gl/maps/1euGLPLzrbtEy8ft5"></object>
             </div>
           </div>
         </div>
