--- a/index.html
+++ b/index.html
@@ -130,16 +130,16 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <h4 class="script-font wow fadeInUp" data-wow-delay="0.6s">Web Analyst</h4>
                 <ul class="social-icon wow fadeInUp" data-wow-delay="0.8s">
                   <li>
-                    <a class="facebook" href="#"><i class="icon-social-facebook"></i></a>
+                    <a class="facebook" href="https://www.facebook.com/bishnu.haldar.100"><i class="icon-social-facebook"></i></a>
                   </li>
                   <li>
                     <a class="twitter" href="#"><i class="icon-social-twitter"></i></a>
                   </li>
                   <li>
-                    <a class="instagram" href="#"><i class="icon-social-instagram"></i></a>
+                    <a class="instagram" href="https://www.instagram.com/__haldar__01__/"><i class="icon-social-instagram"></i></a>
                   </li>
                   <li>
-                    <a class="linkedin" href="#"><i class="icon-social-linkedin"></i></a>
+                    <a class="linkedin" href="https://www.linkedin.com/in/bishnu-haldar-03284a22b/"><i class="icon-social-linkedin"></i></a>
                   </li>
                   <li>
                     <a class="google" href="#"><i class="icon-social-google"></i></a>
