--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ Building ecommerce dashboards
                   <li><span class="pro-title"> Phone </span> <span class="pro-detail">+ (91) 8554003147</span></li>
                 </ul>
               </div>
-              <a href="https://drive.google.com/file/d/1CqPPLSr5lrdNEmFuXgDf14zaWulhv084/view?usp=sharing"><i class="icon-paper-clip"></i> Download Resume</a>
+              <a href="https://docs.google.com/presentation/d/1HKi1N8tUqxDOZTIxtDCyYcHYAKjXxpE2/edit?usp=sharing&ouid=101429758004709216783&rtpof=true&sd=true" class="btn btn-common"><i class="icon-paper-clip"></i> Download Resume</a>
               <a href="bishnu.haldar@capgemini.com" class="btn btn-danger"><i class="icon-speech"></i> Contact Me</a>
             </div>
           </div>   
