--- a/index.html
+++ b/index.html
@@ -307,6 +307,7 @@ Building ecommerce dashboards
                     <span>Mar 2022 - Present</span>
                     <p class="line-text">Web analysis, Tag management, CDP, Data visualization</p>
                   </div>
+                  <iframe width="560" height="315" src="https://www.youtube.com/embed/hSiCQRhXITg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </li>
                 <li>
                   <div class="content-text">
