--- a/index.html
+++ b/index.html
@@ -323,9 +323,9 @@ Building ecommerce dashboards
       </div>
     </div>
     <!-- Resume Section End -->
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/hSiCQRhXITg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/6YfnGfr2Gi0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/bAAka7aLBNc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/hSiCQRhXITg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" style="border: 4px blue"  allowfullscreen></iframe>
+   
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/bAAka7aLBNc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" style="border: 4px blue" allowfullscreen></iframe>
     <!-- Portfolio Section -->
     <section id="portfolios" class="section-padding">
       <!-- Container Starts -->
