Update HTML content with Google Analytics tag

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <!-- Responsive Style -->
     <link rel="stylesheet" type="text/css" href="assets/css/responsive.css">
 
-  </head>
+  <script>this is for testing</script></head>
   <body>
     <!-- Header Area wrapper Starts -->
     <header id="header-wrap">
