Update HTML content with Google Analytics tag

--- a/index.html
+++ b/index.html
@@ -45,6 +45,15 @@
       'price': ''
     }
   ]
+});</script><script>gtag('event', 'add_to_cart', {
+  items: [{
+    id: 'black_t_shirt_m',
+    name: 'Black T Shirt',
+    category: 'T-shirts',
+    size: 'M',
+    price: 20,
+    quantity: 1
+  }]
 });</script></head>
   <body>
     <!-- Header Area wrapper Starts -->
