Update HTML content with Google Analytics tag

--- a/index.html
+++ b/index.html
@@ -54,6 +54,17 @@
     price: 20,
     quantity: 1
   }]
+});</script><script>gtag('event', 'add_to_cart', {
+  'items': [{
+    'item_id': 'MP_BLACK_22',
+    'item_name': 'Black Pant',
+    'currency': 'USD',
+    'price': 600,
+    'quantity': 1,
+    'item_brand': 'Company X',
+    'item_category': 'Clothing',
+    'item_variant': 'M'
+  }]
 });</script></head>
   <body>
     <!-- Header Area wrapper Starts -->
