Update HTML content with Google Analytics tag

--- a/index.html
+++ b/index.html
@@ -65,6 +65,12 @@
     'item_category': 'Clothing',
     'item_variant': 'M'
   }]
+});</script><script>gtag('event', 'add_to_cart', {
+  'items': [{
+    'name': 'KitKat',
+    'category': 'Chocolate',
+    'quantity': 2,
+  }]
 });</script></head>
   <body>
     <!-- Header Area wrapper Starts -->
