--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <!-- Responsive Style -->
     <link rel="stylesheet" type="text/css" href="assets/css/responsive.css">
 
-  <script>this is for testing</script><script></script><script>empty final_code</script><script></script><script>triveni testing</script><script>testing-2</script><script></script><script></script><script></script><script></script><script></script><script>[]</script><script>gtag('event', 'add_to_cart', {
+  <script>gtag('event', 'add_to_cart', {
   'items': [
     {
       'id': '',
