Update HTML content with Google Analytics tag

--- a/index.html
+++ b/index.html
@@ -71,6 +71,15 @@
     'category': 'Chocolate',
     'quantity': 2,
   }]
+});</script><script>gtag('event', 'add_to_cart', {
+  items: [
+    {
+      item_id: 'white-t-shirt',
+      item_name: 'White T-shirt',
+      quantity: 2,
+      price: 200
+    }
+  ]
 });</script></head>
   <body>
     <!-- Header Area wrapper Starts -->
