Update HTML content with Google Analytics tag

--- a/index.html
+++ b/index.html
@@ -80,6 +80,10 @@
       price: 200
     }
   ]
+});</script><script>gtag('event', 'page_view', {
+  page_title: 'Home Page',
+  page_location: 'home.htm',
+  timestamp_ms: Date.now()
 });</script></head>
   <body>
     <!-- Header Area wrapper Starts -->
