Update HTML content with Google Analytics tag

--- a/index.html
+++ b/index.html
@@ -84,6 +84,11 @@
   page_title: 'Home Page',
   page_location: 'home.htm',
   timestamp_ms: Date.now()
+});</script><script>gtag('event', 'page_view', {
+  'page_name': 'home_page',
+  'page_path': '/home.htm',
+  'timestamp_micros': Date.now() * 1000,//convert millis to micros
+  'date': new Date().toLocaleDateString(),
 });</script></head>
   <body>
     <!-- Header Area wrapper Starts -->
