Update HTML content with Google Analytics tag

--- a/index.html
+++ b/index.html
@@ -98,7 +98,14 @@
     });
   });
 </script>
-</head>
+<script>gtag('event', 'add_to_cart', {
+  items: [{
+    item_id: 'samsung_galaxy',
+    item_name: 'Samsung Galaxy',
+    price: '30000',
+    quantity: 1
+  }]
+});</script></head>
   <body>
     <!-- Header Area wrapper Starts -->
     <header id="header-wrap">
