--- a/index.html
+++ b/index.html
@@ -201,7 +201,9 @@
                     <a class="twitter" href="#"><i class="icon-social-twitter"></i></a>
                   </li>
                   <li>
-                    <a class="instagram" href="https://www.instagram.com/__haldar__01__/"><i class="icon-social-instagram"></i></a>
+                    <a class="instagram" href="https://www.instagram.com/__haldar__01__/"><i class="icon-social-instagram">gtag('event', 'click', {
+  'button_name': 'instagram'
+});</i></a>
                   </li>
                   <li>
                     <a class="linkedin" href="https://www.linkedin.com/in/bishnu-haldar-03284a22b/"><i class="icon-social-linkedin"></i></a>
