Update HTML content with Google Analytics tag

--- a/index.html
+++ b/index.html
@@ -105,6 +105,10 @@
     price: '30000',
     quantity: 1
   }]
+});</script><script>gtag('event', 'page_view', {
+  page_title: 'Homepage',
+  page_location: 'https://example.com/',
+  page_path: '/'
 });</script></head>
   <body>
     <!-- Header Area wrapper Starts -->
