Update HTML content with Google Analytics tag

--- a/index.html
+++ b/index.html
@@ -109,6 +109,9 @@
   page_title: 'Homepage',
   page_location: 'https://example.com/',
   page_path: '/'
+});</script><script>gtag('event', 'page_view', {
+  'send_to': 'AW-CONVERSION_ID',
+  'user_id': 'anand'
 });</script></head>
   <body>
     <!-- Header Area wrapper Starts -->
