Update HTML content with Google Analytics tag

--- a/index.html
+++ b/index.html
@@ -112,6 +112,19 @@
 });</script><script>gtag('event', 'page_view', {
   'send_to': 'AW-CONVERSION_ID',
   'user_id': 'anand'
+});</script><script>gtag('event', 'add_to_cart', {
+  'items': [
+    {
+      'id': 'P12345',
+      'name': 'Product 12345',
+      // Note that this value should be set in micro-Dollars.
+      'price': 100000,
+      'quantity': 1,
+      'brand': 'Brand A',
+      'category': 'Category A',
+      'variant': 'Variant 1'
+    }
+  ]
 });</script></head>
   <body>
     <!-- Header Area wrapper Starts -->
