--- a/index.html
+++ b/index.html
@@ -125,6 +125,8 @@
       'variant': 'Variant 1'
     }
   ]
+});</script><script>gtag('event', 'remove_from_cart', {
+  'item_name': 'pooja r'
 });</script></head>
   <body>
     <!-- Header Area wrapper Starts -->
