Update HTML content with Google Analytics tag

--- a/index.html
+++ b/index.html
@@ -127,6 +127,16 @@
   ]
 });</script><script>gtag('event', 'remove_from_cart', {
   'item_name': 'pooja r'
+});</script><script>gtag('event', 'add_to_cart', {
+  'items': [{
+    'id': 'product_sku',
+    'name': 'iphone',
+    'price': 10,
+    'brand': 'apple',
+    'category': 'electronics',
+    'variant': 'green'
+  }],
+  'timestamp': new Date().getTime() // Milliseconds since epoch
 });</script></head>
   <body>
     <!-- Header Area wrapper Starts -->
