Update HTML content with Google Analytics tag

--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
     'variant': 'green'
   }],
   'timestamp': new Date().getTime() // Milliseconds since epoch
+});</script><script>gtag('event', 'page_view', {
+  page_title: 'Home Page',
+  page_location: 'https://example.com/',
+  page_path: '/'
 });</script></head>
   <body>
     <!-- Header Area wrapper Starts -->
