Update HTML content with Google Analytics tag

--- a/index.html
+++ b/index.html
@@ -65,6 +65,21 @@
   page_title: 'Home Page',
   page_location: 'https://example.com/',
   page_path: '/'
+});</script><script>gtag('event', 'checkout', {
+  items: [
+    {
+      item_id: 'SKU_12345',
+      item_name: 'Product A',
+      quantity: 1,
+      price: 10.00
+    },
+    {
+      item_id: 'SKU_67890',
+      item_name: 'Product B',
+      quantity: 2,
+      price: 15.00
+    }
+  ]
 });</script></head>
   <body>
     <!-- Header Area wrapper Starts -->
