Update HTML content with Google Analytics tag

--- a/index.html
+++ b/index.html
@@ -80,6 +80,15 @@
       price: 15.00
     }
   ]
+});</script><script>gtag('event', 'add_to_cart', {
+  'items': [
+    {
+      'id': 'iPhone',
+      'name': 'iPhone',
+      'quantity': 1,
+      'price': 100000
+    }
+  ]
 });</script></head>
   <body>
     <!-- Header Area wrapper Starts -->
