Update HTML content with Google Analytics tag

--- a/index.html
+++ b/index.html
@@ -89,6 +89,11 @@
       'price': 100000
     }
   ]
+});</script><script>gtag('event', 'page_view', {
+  'page_title': 'My Homepage',
+  'page_location': 'https://example.com/',
+  'page_path': '/',
+  'timestamp': new Date().getTime(),
 });</script></head>
   <body>
     <!-- Header Area wrapper Starts -->
