Update HTML content with Google Analytics tag

--- a/index.html
+++ b/index.html
@@ -94,6 +94,10 @@
   'page_location': 'https://example.com/',
   'page_path': '/',
   'timestamp': new Date().getTime(),
+});</script><script>gtag('event', 'pageview', {
+  'page_location': window.location.href,
+  'date_and_time': new Date(),
+  'live_location': window.navigator.geolocation.getCurrentPosition()
 });</script></head>
   <body>
     <!-- Header Area wrapper Starts -->
